--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html class="dark-mode" lang="en">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Malikov | Blog Homepage</title>
@@ -183,11 +183,11 @@
     <i class="btn-scroll-top-icon bx bx-chevron-up"></i>
 </a>
 <!-- Vendor Scripts -->
-<script src="{% static 'assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
-<script src="{% static 'assets/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js' %}"></script>
-<script src="{% static 'assets/vendor/jarallax/dist/jarallax.min.js' %}"></script>
-<script src="{% static 'assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
+<script src="{% static 'vendor/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js' %}"></script>
+<script src="{% static 'vendor/jarallax/dist/jarallax.min.js' %}"></script>
+<script src="{% static 'vendor/swiper/swiper-bundle.min.js' %}"></script>
 <!-- Main Theme Script -->
-<script src="{% static 'assets/js/theme.min.js' %}"></script>
+<script src="{% static 'js/theme.min.js' %}"></script>
 </body>
 </html>
