Home page template ready

--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -12,32 +12,24 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Home</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/" class="dropdown-item">Account Details</a></li>
-                                <li><a href="/" class="dropdown-item">Security</a></li>
-                            </ul>
+                            <a href="/" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Posts</a>
                             <ul class="dropdown-menu">
-                                <li><a href="/" class="dropdown-item">Account Details</a></li>
-                                <li><a href="/" class="dropdown-item">Security</a></li>
+                                <li><a href="/" class="dropdown-item">Articles</a></li>
+                                <li><a href="#podcasts" class="dropdown-item">Podcasts</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a href="/" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">About</a>
                             <ul class="dropdown-menu">
-                                <li><a href="/" class="dropdown-item">Account Details</a></li>
-                                <li><a href="/" class="dropdown-item">Security</a></li>
+                                <li><a href="/" class="dropdown-item">About me</a></li>
+                                <li><a href="/" class="dropdown-item">Projects</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a href="/" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Contact</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/" class="dropdown-item">Account Details</a></li>
-                                <li><a href="/" class="dropdown-item">Security</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a href="/" class="nav-link">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -97,9 +89,9 @@
                         <hr class="dropdown-divider2">
                         <li class="dropdown-item">
                             <div class="form-check form-switch mode-switch pe-lg-1 ms-auto me-4" data-bs-toggle="mode">
-                                <input type="checkbox" class="form-check-input" id="theme-mode">
-                                <label class="form-check-label d-none d-sm-block" for="theme-mode">Light</label>
-                                <label class="form-check-label d-none d-sm-block" for="theme-mode">Dark</label>
+{#                                <input type="checkbox" class="form-check-input" id="theme-mode">#}
+                                <label class="form-check-label d-sm-block btn btn-sm btn-outline-info" for="theme-mode">Light</label>
+                                <label class="form-check-label d-sm-block btn btn-sm btn-primary" for="theme-mode">Dark</label>
                             </div>
                         </li>
                     </ul>
