--- a/templates/home.html
+++ b/templates/home.html
@@ -771,7 +771,7 @@
         </a>
     </section>
     <!-- Latest podcasts -->
-    <section class="container mb-5 pt-3 pb-lg-5">
+    <section id="podcasts" class="container mb-5 pt-3 pb-lg-5">
         <div class="row">
             <div class="col-xl-3">
                 <div class="d-xl-block d-flex align-items-center justify-content-between mb-xl-0 mb-4 pb-xl-0 pb-3">
