Sign Up Sign In

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -174,7 +174,10 @@
     {% block content %}
 
     {% endblock %}
+
+{% block footer %}
 {% include 'base/footer.html' %}
+{% endblock %}
 </main>
 
 <!-- Back to top button -->
