--- a/templates/blog-podcast.html
+++ b/templates/blog-podcast.html
@@ -234,7 +234,7 @@
                                                 <h6 class="px-3 mb-2">Specialty</h6>
                                                 <ul class="list-unstyled">
                                                     <li><a href="404-v1.html" class="dropdown-item py-1">404 Error v.1</a></li>
-                                                    <li><a href="404-v2.html" class="dropdown-item py-1">404 Error v.2</a></li>
+                                                    <li><a href="404.html" class="dropdown-item py-1">404 Error v.2</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -250,8 +250,8 @@
                                         <li><a href="account-saved-items.html" class="dropdown-item">Saved Items</a></li>
                                         <li><a href="account-collections.html" class="dropdown-item">My Collections</a></li>
                                         <li><a href="account-payment.html" class="dropdown-item">Payment Details</a></li>
-                                        <li><a href="account-signin.html" class="dropdown-item">Sign In</a></li>
-                                        <li><a href="account-signup.html" class="dropdown-item">Sign Up</a></li>
+                                        <li><a href="signin.html" class="dropdown-item">Sign In</a></li>
+                                        <li><a href="signup.html" class="dropdown-item">Sign Up</a></li>
                                     </ul>
                                 </li>
                             </ul>
