--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,11 +13,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="position-relative mb-4">
-                                <label for="name" class="form-label fs-base">Full name</label>
-                                <input type="text" id="name" class="form-control form-control-lg" placeholder="Your name" required>
-                                <div class="invalid-feedback position-absolute start-0 top-100">Please enter your
-                                    name!
-                                </div>
+                                <input type="text" id="name" class="form-control form-control-lg" placeholder="Username" required>
                             </div>
                         </div>
                         <div class="col-sm-6">
