--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -3,7 +3,8 @@
 <!-- Remove "navbar-sticky" class to make navigation bar scrollable with the page -->
 <header class="header navbar navbar-expand-lg navbar-light bg-light navbar-sticky">
     <div class="container px-3">
-        <a href="/" class="navbar-brand pe-3" style="color: red;">&lt;/<span style="color: #4044EE">Malikov</span>&gt;</a>
+        <a href="/" class="navbar-brand pe-3" style="color: red;">&lt;/<span
+                style="color: #4044EE">Malikov</span>&gt;</a>
         <div id="navbarNav" class="offcanvas offcanvas-end">
             <div class="offcanvas-header border-bottom">
                 <h5 class="offcanvas-title">Menu</h5>
@@ -35,38 +36,41 @@
                 </ul>
             </div>
             <div class="offcanvas-footer border-top">
-                <ul class="navbar-nav me2-auto mb-2 mb-lg-0 ">
-                    <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">
-                            <img src="{% static 'img/avatar/18.jpg' %}" class="d-block rounded-circle" width="50"
-                                 alt="John Doe"><span style="margin-left:10px;">@malikov</span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu2">
-                            <li><a class="dropdown-item"
-                                   style="color: #4044EE; font-weight: bolder; font-size: 0.9rem;">Abdusamad
-                                Malikov</a></li>
-                            <hr class="dropdown-divider2">
-                            <li><a href="account-details.html" class="dropdown-item">Account Details</a></li>
-                            <li><a href="account-security.html" class="dropdown-item">Security</a></li>
-                            <li><a href="account-saved-items.html" class="dropdown-item">Saved Items</a></li>
-                            <li><a href="account-collections.html" class="dropdown-item">My Collections</a></li>
-                            <li><a href="account-signup.html" class="dropdown-item link-danger">Log Out</a></li>
-                            <hr class="dropdown-divider2">
-                            <li class="dropdown-item">
-                                <div class="form-check form-switch mode-switch pe-lg-1 ms-auto me-4"
-                                     data-bs-toggle="mode">
-                                    <input type="checkbox" class="form-check-input" id="theme-mode">
-                                    <label class="form-check-label d-none d-sm-block" for="theme-mode">Light</label>
-                                    <label class="form-check-label d-none d-sm-block" for="theme-mode">Dark</label>
-                                </div>
-                            </li>
-                        </ul>
-                    <li>
-                </ul>
-                <!--<a href="/" class="btn btn-primary btn-sm fs-sm rounded d-none d-lg-inline-flex" target="_blank" rel="noopener">
-                    &nbsp;Sign Up
-            </a>
-                -->
+                {% if user.is_authenticated %}
+                    <ul class="navbar-nav me2-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">
+                                <img src="{% static 'img/avatar/18.jpg' %}" class="d-block rounded-circle" width="50"
+                                     alt="John Doe"><span style="margin-left:10px;">@{{ user.username }}</span>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu2">
+                                <li><a class="dropdown-item"
+                                       style="color: #4044EE; font-weight: bolder; font-size: 0.9rem;">{{ user.first_name }} {{ user.last_name }}</a>
+                                </li>
+                                <hr class="dropdown-divider2">
+                                <li><a href="account-details.html" class="dropdown-item">Account Details</a></li>
+                                <li><a href="account-security.html" class="dropdown-item">Security</a></li>
+                                <li><a href="account-saved-items.html" class="dropdown-item">Saved Items</a></li>
+                                <li><a href="account-collections.html" class="dropdown-item">My Collections</a></li>
+                                <li><a href="account-signup.html" class="dropdown-item link-danger">Log Out</a></li>
+                                <hr class="dropdown-divider2">
+                                <li class="dropdown-item">
+                                    <div class="form-check form-switch mode-switch pe-lg-1 ms-auto me-4"
+                                         data-bs-toggle="mode">
+                                        <input type="checkbox" class="form-check-input" id="theme-mode">
+                                        <label class="form-check-label d-none d-sm-block" for="theme-mode">Light</label>
+                                        <label class="form-check-label d-none d-sm-block" for="theme-mode">Dark</label>
+                                    </div>
+                                </li>
+                            </ul>
+                        <li>
+                    </ul>
+                {% else %}
+                    <a href="/" class="btn btn-primary btn-sm fs-sm rounded d-lg-inline-flex" target="_blank"
+                       rel="noopener">
+                        &nbsp;Sign Up
+                    </a>
+                {% endif %}
             </div>
         </div>
         <!-- Hamburger button -->
@@ -74,37 +78,43 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <!-- AVATAR -->
-        <ul class="navbar-nav me2-auto mb-2 mb-lg-0 d-none-ava ">
-            <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">
-                    <img src="{% static 'img/avatar/18.jpg' %}" class="d-block rounded-circle" width="50"
-                         alt="John Doe"><span style="margin-left:10px;">@malikov</span>
-                </a>
-                <ul class="dropdown-menu dropdown-menu2">
-                    <li><a class="dropdown-item" style="color: #4044EE; font-weight: bolder; font-size: 0.9rem;">Abdusamad
-                        Malikov</a></li>
-                    <hr class="dropdown-divider2">
-                    <li><a href="account-details.html" class="dropdown-item">Account Details</a></li>
-                    <li><a href="account-security.html" class="dropdown-item">Security</a></li>
-                    <li><a href="account-saved-items.html" class="dropdown-item">Saved Items</a></li>
-                    <li><a href="account-collections.html" class="dropdown-item">My Collections</a></li>
-                    <li><a href="account-signup.html" class="dropdown-item link-danger">Log Out</a></li>
-                    <hr class="dropdown-divider2">
-                    <li class="dropdown-item">
-                        <div class="form-check form-switch mode-switch pe-lg-1 ms-auto me-4" data-bs-toggle="mode">
-{#                            <input type="checkbox" class="form-check-input" id="theme-mode">#}
-                            <label class="form-check-label d-sm-block btn btn-sm btn-outline-info" for="theme-mode">Light</label>
-                            <label class="form-check-label d-sm-block btn btn-sm btn-primary"
-                                   for="theme-mode">Dark</label>
-                        </div>
-                    </li>
-                </ul>
-            <li>
-        </ul>
-        <!-- <a href="/" class="btn btn-primary btn-sm fs-sm rounded d-none d-lg-inline-flex" target="_blank" rel="noopener">
-            &nbsp;Sign Up
-            </a> -->
+        {% if user.is_authenticated %}
+            <ul class="navbar-nav me2-auto mb-2 mb-lg-0 d-none-ava ">
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">
+                        <img src="{{ user.author.avatar.url }}" class="d-block rounded-circle" width="50"
+                             alt="No"><span style="margin-left:10px;">@{{ user.username }}</span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu2">
+                        <li><a class="dropdown-item"
+                               style="color: #4044EE; font-weight: bolder; font-size: 0.9rem;">{{ user.first_name }} {{ user.last_name }}</a>
+                        </li>
+                        <hr class="dropdown-divider2">
+                        <li><a href="account-details.html" class="dropdown-item">Account Details</a></li>
+                        <li><a href="account-security.html" class="dropdown-item">Security</a></li>
+                        <li><a href="account-saved-items.html" class="dropdown-item">Saved Items</a></li>
+                        <li><a href="account-collections.html" class="dropdown-item">My Collections</a></li>
+                        <li><a href="account-signup.html" class="dropdown-item link-danger">Log Out</a></li>
+                        <hr class="dropdown-divider2">
+                        <li class="dropdown-item">
+                            <div class="form-check form-switch mode-switch pe-lg-1 ms-auto me-4" data-bs-toggle="mode">
+                                {#                            <input type="checkbox" class="form-check-input" id="theme-mode">#}
+                                <label class="form-check-label d-sm-block btn btn-sm btn-outline-info" for="theme-mode">Light</label>
+                                <label class="form-check-label d-sm-block btn btn-sm btn-primary"
+                                       for="theme-mode">Dark</label>
+                            </div>
+                        </li>
+                    </ul>
+                <li>
+            </ul>
+        {% else %}
+            <a href="/" class="btn btn-primary btn-sm fs-sm rounded d-none d-lg-inline-flex" target="_blank"
+               rel="noopener">
+                &nbsp;Sign Up
+            </a>
+        {% endif %}
+        <!-- AVATAR -->
+
     </div>
 </header>
