--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -170,14 +170,16 @@
     </div>
 </div>
 <main class="page-wrapper">
-    {% include 'base/header.html' %}
+    {% block header %}
+        {% include 'base/header.html' %}
+    {% endblock %}
     {% block content %}
 
     {% endblock %}
 
-{% block footer %}
-{% include 'base/footer.html' %}
-{% endblock %}
+    {% block footer %}
+        {% include 'base/footer.html' %}
+    {% endblock %}
 </main>
 
 <!-- Back to top button -->
