--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,28 +1,32 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block content %}
+    {% block header %}
+    {% endblock %}
     <!-- Page content -->
     <section class="position-relative h-100 pt-5 pb-4">
         <!-- Sign in form -->
         <div class="container d-flex flex-wrap justify-content-center mt-lg-5">
             <div class="w-100 align-self-end pt-1 pt-md-4 pb-4" style="max-width: 526px;">
                 <h1 class="text-center text-xl-start">Welcome Back</h1>
-                <p class="text-center text-xl-start pb-3 mb-3">Don’t have an account yet? <a href="signup.html">Register
+                <p class="text-center text-xl-start pb-3 mb-3">Don’t have an account yet? <a href="{% url 'signup' %}">Register
                     here.</a></p>
-                <form class="needs-validation mb-2" novalidate> {% csrf_token %}
+                <form class="needs-validation mb-2" action="." method="post">{% csrf_token %}
                     <div class="position-relative mb-4">
-                        <label for="email" class="form-label fs-base">Email</label>
-                        <input type="email" id="email" class="form-control form-control-lg" placeholder="e.g. malikov@gmail.com" required>
+                        <label for="id_username" class="form-label fs-base">Username</label>
+                        <input type="text" name='username' id="id_username" class="form-control form-control-lg"
+                               placeholder="e.g. malikov03" required>
                         <div class="invalid-feedback position-absolute start-0 top-100">Please enter a valid email
                             address!
                         </div>
                     </div>
                     <div class="mb-4">
-                        <label for="password" class="form-label fs-base">Password</label>
+                        <label for="id_password" class="form-label fs-base">Password</label>
                         <div class="password-toggle">
-                            <input type="password" id="password" class="form-control form-control-lg" placeholder="********" required>
+                            <input type="password" name='password' id="id_password" class="form-control form-control-lg"
+                                   placeholder="********" required>
                             <label class="password-toggle-btn" aria-label="Show/hide password">
-                                <input class="password-toggle-check" type="checkbox" >
+                                <input class="password-toggle-check" type="checkbox">
                                 <span class="password-toggle-indicator"></span>
                             </label>
                             <div class="invalid-feedback position-absolute start-0 top-100">Please enter your
@@ -36,6 +40,7 @@
                             <label for="remember" class="form-check-label fs-base">Remember me</label>
                         </div>
                     </div>
+                    {#                    {{ form.as_p }}#}
                     <button type="submit" class="btn btn-primary shadow-primary btn-lg w-100">Sign in</button>
                 </form>
                 <a href="#" class="btn btn-link btn-lg w-100">Forgot your password?</a>
