--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -49,7 +49,7 @@
                                 </li>
                                 <hr class="dropdown-divider2">
                                 <li><a href="account-details.html" class="dropdown-item">Account Details</a></li>
-                                <li><a href="account-security.html" class="dropdown-item">Security</a></li>
+                                <li><a href="{% url 'password_change' %}" class="dropdown-item">Security</a></li>
                                 <li><a href="account-saved-items.html" class="dropdown-item">Saved Items</a></li>
                                 <li><a href="account-collections.html" class="dropdown-item">My Collections</a></li>
                                 <li><a href="{% url 'logout' %}" class="dropdown-item link-danger">Log Out</a></li>
@@ -92,7 +92,7 @@
                         </li>
                         <hr class="dropdown-divider2">
                         <li><a href="account-details.html" class="dropdown-item">Account Details</a></li>
-                        <li><a href="account-security.html" class="dropdown-item">Security</a></li>
+                        <li><a href="{% url 'password_change' %}" class="dropdown-item">Security</a></li>
                         <li><a href="account-saved-items.html" class="dropdown-item">Saved Items</a></li>
                         <li><a href="account-collections.html" class="dropdown-item">My Collections</a></li>
                         <li><a href="{% url 'logout' %}" class="dropdown-item link-danger">Log Out</a></li>
