--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -62,7 +62,7 @@
                                             <input class="password-toggle-check" type="checkbox">
                                             <span class="password-toggle-indicator"></span>
                                             </label>
-                                            <div class="invalid-tooltip position-absolute top-100 start-0">Incorrect password!</div>
+                                            <div class="invalid-tooltip position-absolute top-100 start-0">I{{ form.error }}</div>
                                         </div>
                                     </div>
                                 </div>
